// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: SplitButton snapshot 1`] = `
.c5 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 8px 1px 1px 8px;
  background-color: hsl(0,0%,100%);
  height: 32px;
  outline: none;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  padding-left: 12px;
  padding-right: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 svg {
  margin-right: 4px;
  margin-bottom: 3px;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1.dd-closed {
  border-color: hsl(200,10%,20%);
}

.c1.dd-closed:hover,
.c1.dd-closed:focus {
  border-color: hsl(200,96%,35%);
}

.c1.dd-open {
  border-color: hsl(200,96%,35%);
}

.c7 {
  padding: 8px 0;
  outline: none;
  border-radius: 4px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  border: 0;
}

.c7 [data-reach-menu-item] {
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c7 [data-reach-menu-item][data-selected] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 {
  box-sizing: border-box;
  background-color: hsl(200,10%,20%);
  height: 32px;
  width: 36px;
  border-radius: 1px 8px 8px 1px;
  margin-left: 1px;
  border: 0px;
  outline: none;
  cursor: pointer;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
}

.c3:hover,
.c3:focus {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 .c4 {
  width: 10px;
  height: 10px;
  color: hsl(0,0%,100%);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
}

.c0 .c2[aria-expanded='true'] .c4 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c6 {
  position: fixed;
  z-index: 1000;
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c7 [data-reach-menu-item] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 dd-closed"
      type="button"
    >
      Test
    </button>
    <button
      aria-controls="menu--1"
      aria-haspopup="true"
      aria-label="Action List"
      class="c2 c3"
      data-reach-menu-button=""
      id="menu-button--menu--1"
      type="button"
      variant="standard"
    >
      <svg
        aria-hidden="true"
        class="c4 c5"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </button>
    <div
      class="c6"
      data-reach-menu=""
      data-reach-menu-popover=""
      hidden=""
    >
      <div
        aria-labelledby="menu-button--menu--1"
        class="c7"
        data-reach-menu-items=""
        id="menu--1"
        role="menu"
        tabindex="-1"
        variant="standard"
      >
        <div
          data-reach-menu-item=""
          data-valuetext="One Action"
          id="option-0--menu--1"
          role="menuitem"
          tabindex="-1"
        >
          One Action
        </div>
        <div
          data-reach-menu-item=""
          data-valuetext="Another Action"
          id="option-1--menu--1"
          role="menuitem"
          tabindex="-1"
        >
          Another Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SplitButton with theme customization dropdown should not have box shadows 1`] = `
.c5 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 8px 1px 1px 8px;
  background-color: hsl(0,0%,100%);
  height: 32px;
  outline: none;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  padding-left: 12px;
  padding-right: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 svg {
  margin-right: 4px;
  margin-bottom: 3px;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1.dd-closed {
  border-color: hsl(200,10%,20%);
}

.c1.dd-closed:hover,
.c1.dd-closed:focus {
  border-color: hsl(200,96%,35%);
}

.c1.dd-open {
  border-color: hsl(200,96%,35%);
}

.c7 {
  padding: 8px 0;
  outline: none;
  border-radius: 4px;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(200,29%,90%);
}

.c7 [data-reach-menu-item] {
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c7 [data-reach-menu-item][data-selected] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 {
  box-sizing: border-box;
  background-color: hsl(200,10%,20%);
  height: 32px;
  width: 36px;
  border-radius: 1px 8px 8px 1px;
  margin-left: 1px;
  border: 0px;
  outline: none;
  cursor: pointer;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
}

.c3:hover,
.c3:focus {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 .c4 {
  width: 10px;
  height: 10px;
  color: hsl(0,0%,100%);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
}

.c0 .c2[aria-expanded='true'] .c4 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c6 {
  position: fixed;
  z-index: 1000;
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c7 [data-reach-menu-item] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 dd-closed"
      type="button"
    >
      Test
    </button>
    <button
      aria-controls="menu--44"
      aria-haspopup="true"
      aria-label="Action List"
      class="c2 c3"
      data-reach-menu-button=""
      id="menu-button--menu--44"
      type="button"
      variant="standard"
    >
      <svg
        aria-hidden="true"
        class="c4 c5"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </button>
    <div
      class="c6"
      data-reach-menu=""
      data-reach-menu-popover=""
      hidden=""
    >
      <div
        aria-labelledby="menu-button--menu--44"
        class="c7"
        data-reach-menu-items=""
        id="menu--44"
        role="menu"
        tabindex="-1"
        variant="standard"
      >
        <div
          data-reach-menu-item=""
          data-valuetext="One Action"
          id="option-0--menu--44"
          role="menuitem"
          tabindex="-1"
        >
          One Action
        </div>
        <div
          data-reach-menu-item=""
          data-valuetext="Another Action"
          id="option-1--menu--44"
          role="menuitem"
          tabindex="-1"
        >
          Another Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SplitButton with theme customization should have 2px borders 1`] = `
.c5 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 2px solid;
  border-radius: 8px 1px 1px 8px;
  background-color: hsl(0,0%,100%);
  height: 32px;
  outline: none;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  padding-left: 12px;
  padding-right: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 svg {
  margin-right: 4px;
  margin-bottom: 3px;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1.dd-closed {
  border-color: hsl(200,10%,20%);
}

.c1.dd-closed:hover,
.c1.dd-closed:focus {
  border-color: hsl(200,96%,35%);
}

.c1.dd-open {
  border-color: hsl(200,96%,35%);
}

.c7 {
  padding: 8px 0;
  outline: none;
  border-radius: 4px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  border: 0;
}

.c7 [data-reach-menu-item] {
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c7 [data-reach-menu-item][data-selected] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 {
  box-sizing: border-box;
  background-color: hsl(200,10%,20%);
  height: 32px;
  width: 36px;
  border-radius: 1px 8px 8px 1px;
  margin-left: 1px;
  border: 0px;
  outline: none;
  cursor: pointer;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
}

.c3:hover,
.c3:focus {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 .c4 {
  width: 10px;
  height: 10px;
  color: hsl(0,0%,100%);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
}

.c0 .c2[aria-expanded='true'] .c4 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c6 {
  position: fixed;
  z-index: 1000;
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c7 [data-reach-menu-item] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 dd-closed"
      type="button"
    >
      Test
    </button>
    <button
      aria-controls="menu--49"
      aria-haspopup="true"
      aria-label="Action List"
      class="c2 c3"
      data-reach-menu-button=""
      id="menu-button--menu--49"
      type="button"
      variant="standard"
    >
      <svg
        aria-hidden="true"
        class="c4 c5"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </button>
    <div
      class="c6"
      data-reach-menu=""
      data-reach-menu-popover=""
      hidden=""
    >
      <div
        aria-labelledby="menu-button--menu--49"
        class="c7"
        data-reach-menu-items=""
        id="menu--49"
        role="menu"
        tabindex="-1"
        variant="standard"
      >
        <div
          data-reach-menu-item=""
          data-valuetext="One Action"
          id="option-0--menu--49"
          role="menuitem"
          tabindex="-1"
        >
          One Action
        </div>
        <div
          data-reach-menu-item=""
          data-valuetext="Another Action"
          id="option-1--menu--49"
          role="menuitem"
          tabindex="-1"
        >
          Another Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SplitButton with theme customization should have intermediate shape 1`] = `
.c5 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 8px 1px 1px 8px;
  background-color: hsl(0,0%,100%);
  height: 32px;
  outline: none;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  padding-left: 12px;
  padding-right: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 svg {
  margin-right: 4px;
  margin-bottom: 3px;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1.dd-closed {
  border-color: hsl(200,10%,20%);
}

.c1.dd-closed:hover,
.c1.dd-closed:focus {
  border-color: hsl(200,96%,35%);
}

.c1.dd-open {
  border-color: hsl(200,96%,35%);
}

.c7 {
  padding: 8px 0;
  outline: none;
  border-radius: 4px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  border: 0;
}

.c7 [data-reach-menu-item] {
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c7 [data-reach-menu-item][data-selected] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 {
  box-sizing: border-box;
  background-color: hsl(200,10%,20%);
  height: 32px;
  width: 36px;
  border-radius: 1px 8px 8px 1px;
  margin-left: 1px;
  border: 0px;
  outline: none;
  cursor: pointer;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
}

.c3:hover,
.c3:focus {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 .c4 {
  width: 10px;
  height: 10px;
  color: hsl(0,0%,100%);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
}

.c0 .c2[aria-expanded='true'] .c4 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c6 {
  position: fixed;
  z-index: 1000;
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c7 [data-reach-menu-item] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 dd-closed"
      type="button"
    >
      Test
    </button>
    <button
      aria-controls="menu--39"
      aria-haspopup="true"
      aria-label="Action List"
      class="c2 c3"
      data-reach-menu-button=""
      id="menu-button--menu--39"
      type="button"
      variant="standard"
    >
      <svg
        aria-hidden="true"
        class="c4 c5"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </button>
    <div
      class="c6"
      data-reach-menu=""
      data-reach-menu-popover=""
      hidden=""
    >
      <div
        aria-labelledby="menu-button--menu--39"
        class="c7"
        data-reach-menu-items=""
        id="menu--39"
        role="menu"
        tabindex="-1"
        variant="standard"
      >
        <div
          data-reach-menu-item=""
          data-valuetext="One Action"
          id="option-0--menu--39"
          role="menuitem"
          tabindex="-1"
        >
          One Action
        </div>
        <div
          data-reach-menu-item=""
          data-valuetext="Another Action"
          id="option-1--menu--39"
          role="menuitem"
          tabindex="-1"
        >
          Another Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: SplitButton with theme customization should have square shape 1`] = `
.c5 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 1px;
  background-color: hsl(0,0%,100%);
  height: 32px;
  outline: none;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  cursor: pointer;
  padding-left: 12px;
  padding-right: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 svg {
  margin-right: 4px;
  margin-bottom: 3px;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1.dd-closed {
  border-color: hsl(200,10%,20%);
}

.c1.dd-closed:hover,
.c1.dd-closed:focus {
  border-color: hsl(200,96%,35%);
}

.c1.dd-open {
  border-color: hsl(200,96%,35%);
}

.c7 {
  padding: 8px 0;
  outline: none;
  border-radius: 1px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  border: 0;
}

.c7 [data-reach-menu-item] {
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c7 [data-reach-menu-item][data-selected] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 {
  box-sizing: border-box;
  background-color: hsl(200,10%,20%);
  height: 32px;
  width: 36px;
  border-radius: 1px;
  margin-left: 1px;
  border: 0px;
  outline: none;
  cursor: pointer;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
}

.c3:hover,
.c3:focus {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c3 .c4 {
  width: 10px;
  height: 10px;
  color: hsl(0,0%,100%);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
}

.c0 .c2[aria-expanded='true'] .c4 {
  -webkit-transform: rotate3d(1,0,0,180deg);
  -ms-transform: rotate3d(1,0,0,180deg);
  transform: rotate3d(1,0,0,180deg);
}

.c6 {
  position: fixed;
  z-index: 1000;
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c7 [data-reach-menu-item] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 dd-closed"
      type="button"
    >
      Test
    </button>
    <button
      aria-controls="menu--34"
      aria-haspopup="true"
      aria-label="Action List"
      class="c2 c3"
      data-reach-menu-button=""
      id="menu-button--menu--34"
      type="button"
      variant="standard"
    >
      <svg
        aria-hidden="true"
        class="c4 c5"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </button>
    <div
      class="c6"
      data-reach-menu=""
      data-reach-menu-popover=""
      hidden=""
    >
      <div
        aria-labelledby="menu-button--menu--34"
        class="c7"
        data-reach-menu-items=""
        id="menu--34"
        role="menu"
        tabindex="-1"
        variant="standard"
      >
        <div
          data-reach-menu-item=""
          data-valuetext="One Action"
          id="option-0--menu--34"
          role="menuitem"
          tabindex="-1"
        >
          One Action
        </div>
        <div
          data-reach-menu-item=""
          data-valuetext="Another Action"
          id="option-1--menu--34"
          role="menuitem"
          tabindex="-1"
        >
          Another Action
        </div>
      </div>
    </div>
  </div>
</div>
`;
